correction uninitialized value

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -11,7 +11,7 @@ SRC_1 = brain.c \
 OBJ_1 = ${SRC_1:.c=.o}
 
 .c.o:
-	${CC} -c $< -o ${<:.c=.o}
+	${CC} ${FLAGS} -c $< -o ${<:.c=.o}
 
 ${NAME}: ${OBJ_1}
 	${CC} ${FLAGS} ${OBJ_1} main.c -o ${NAME}
